--- a/src/components/_common/_content/_product/ProductList/ProductList.module.scss
+++ b/src/components/_common/_content/_product/ProductList/ProductList.module.scss
@@ -4,5 +4,5 @@
     box-shadow: none;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: $padding_big;
+    gap: var(--offset-large);
 }
