--- a/src/components/_common/_content/_product/ProductCard/ProductCard.module.scss
+++ b/src/components/_common/_content/_product/ProductCard/ProductCard.module.scss
@@ -4,7 +4,7 @@
     background: var(--background-second);
     display: flex;
     flex-direction: column;
-    gap: $padding_big;
+    gap: var(--offset-medium);
 
     .top {
 
