--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -1,13 +1,19 @@
 :root body.white {
     background: var(--background-main);
+    color: var(--text-color-main);
 
-    --background-main: #fff;
-    --background-second: #eee;
-    --background-item: #f8f8f8;
+    --background-main: #f4f4fd;
+    --background-second: #fff;
+    --background-item: #f3f3f3;
     --text-color-main: #111;
     --text-color-second: #666;
     --text-color-error: #f88;
     --text-color-success: #8f8;
     --text-color-link: #88f;
-    --box-shadow: 0 4px 0 -2px rgba(0, 0, 0, .2);
+    --button-primary-background: #42a1e5;
+    --button-primary-background-hover: #52bafa;
+    --button-primary-color: #fff;
+    --box-shadow: 0 4px 0 -2px rgba(0, 0, 0, .15);
+    --box-shadow-small: 0 2px 0 -1px rgba(0, 0, 0, .1);
+    --box-shadow-none: 0 4px 0 -4px rgba(0, 0, 0, .15);
 }
