--- a/src/components/_common/_content/_product/ProductList/ProductList.module.scss
+++ b/src/components/_common/_content/_product/ProductList/ProductList.module.scss
@@ -5,4 +5,16 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: var(--offset-large);
+
+    @media screen and (max-width: 1050px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media screen and (max-width: 850px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media screen and (max-width: 550px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
