--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -15,6 +15,12 @@
     --button-primary-background-hover: #52bafa;
     --button-primary-color: #fff;
 
+    --button-danger-background: #e54242;
+    --button-danger-background-hover: #ee5656;
+    --button-danger-color: #fff;
+
+    --border-gray: #cbcbcb;
+
     --box-shadow: 0 4px 0 -2px rgba(0, 0, 0, .15);
     --box-shadow-small: 0 2px 0 -1px rgba(0, 0, 0, .1);
     --box-shadow-none: 0 4px 0 -4px rgba(0, 0, 0, .15);
