--- a/src/components/_ui/_button/Button/Button.module.scss
+++ b/src/components/_ui/_button/Button/Button.module.scss
@@ -1,24 +1,72 @@
 $padding: var(--offset-medium);
 
 .container {
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     border-radius: $padding;
     padding: $padding;
     box-shadow: var(--box-shadow-small);
-    border: 2px solid var(--background-item);
+    border: 1px solid var(--background-item);
     background: var(--background-item);
     color: var(--text-color-main);
     transition: var(--transition-fast);
 
     &.primary {
-        border: 2px solid var(--button-primary-background);
+        border: 1px solid var(--button-primary-background);
         background: var(--button-primary-background);
         color: var(--button-primary-color);
 
         &:hover {
-            border: 2px solid var(--button-primary-background-hover);
+            border: 1px solid var(--button-primary-background-hover);
             background: var(--button-primary-background-hover);
         }
+    }
+
+    &.second {
+        border: 1px solid var(--border-gray);
+        background: var(--background-second);
+        color: var(--text-color-second);
+
+        &:hover {
+            color: var(--text-color-main);
+        }
+    }
+
+    &.main {
+        border: 1px solid var(--button-primary-background);
+        background: var(--background-second);
+        color: var(--button-primary-background);
+
+        &:hover {
+            border: 1px solid var(--button-primary-background-hover);
+            color: var(--button-primary-background-hover);
+        }
+    }
+
+    &.danger {
+        border: 1px solid var(--button-danger-background);
+        background: var(--button-danger-background);
+        color: var(--button-danger-color);
+
+        &:hover {
+            border: 1px solid var(--button-danger-background-hover);
+            color: var(--button-danger-background-hover);
+        }
+    }
+
+    &.square {
+        min-width: 40px;
+        max-width: 40px;
+    }
+
+    &.skeleton {
+        border: 1px solid var(--gradient);
+        background: var(--gradient);
+        animation: var(--gradient-animation);
+        background-size: var(--gradient-size);
     }
 
     &:hover {
