--- a/src/components/_common/_header/HeaderUser/HeaderUserProfile/HeaderUserProfileDropdown/HeaderUserProfileDropdown.module.scss
+++ b/src/components/_common/_header/HeaderUser/HeaderUserProfile/HeaderUserProfileDropdown/HeaderUserProfileDropdown.module.scss
@@ -1,6 +1,11 @@
 .container {
     display: flex;
     flex-direction: column;
-    gap: var(--offset-medium);
+    gap: var(--offset-small);
     width: 100%;
+    align-items: center;
+
+    .avatar {
+        width: 70px;
+    }
 }
