--- a/src/components/_ui/_dropdown/Dropdown/Dropdown.module.scss
+++ b/src/components/_ui/_dropdown/Dropdown/Dropdown.module.scss
@@ -1,10 +1,42 @@
+$offset: var(--offset-medium);
+
+@keyframes openAnimation {
+    0% {
+        height: 0;
+        padding: 0 $offset;
+        opacity: 0;
+    }
+    100% {
+        height: auto;
+        padding: $offset;
+        opacity: 1;
+    }
+}
+
+@keyframes closeAnimation {
+    0% {
+        height: auto;
+        padding: $offset;
+        opacity: 1;
+    }
+    100% {
+        height: 0;
+        padding: 0 $offset;
+        opacity: 0;
+    }
+}
+
 .container {
     position: absolute;
     z-index: 100;
     background: var(--background-second);
+    padding: 0 $offset;
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
 
     &.opened {
-
+        animation: openAnimation .2s forwards;
     }
 
     &.top_left {
