--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -10,6 +10,7 @@
     --text-color-error: #f88;
     --text-color-success: #8f8;
     --text-color-link: #88f;
+    --text-color-invert: #fff;
 
     --button-primary-background: #42a1e5;
     --button-primary-background-hover: #52bafa;
