--- a/src/components/_common/_content/_product/ProductCard/ProductCardInfo/ProductCardInfo.module.scss
+++ b/src/components/_common/_content/_product/ProductCard/ProductCardInfo/ProductCardInfo.module.scss
@@ -3,6 +3,20 @@
     flex-direction: column;
     gap: var(--offset-medium);
 
+    &.skeleton {
+        user-select: none;
+
+        .title,
+        .description,
+        .price {
+            color: transparent;
+            border-radius: var(--offset-small);
+            background: var(--gradient);
+            background-size: var(--gradient-size);
+            animation: var(--gradient-animation);
+        }
+    }
+
     .title {
         font-size: 16px;
         color: var(--text-color-main);
