--- a/src/components/_common/_header/HeaderBanner/HeaderBanner.module.scss
+++ b/src/components/_common/_header/HeaderBanner/HeaderBanner.module.scss
@@ -6,6 +6,11 @@
     height: 300px;
     display: flex;
     align-items: end;
+    transition: var(--transition-slow);
+
+    &.small {
+        height: 100px;
+    }
 
     .footer {
 
