--- a/src/components/_ui/_container/Box/Box.module.scss
+++ b/src/components/_ui/_container/Box/Box.module.scss
@@ -5,4 +5,5 @@ $padding: var(--offset-large);
     border-radius: $padding;
     padding: $padding;
     box-shadow: var(--box-shadow);
+    background: var(--background-main);
 }
