--- a/src/components/_common/_content/_product/ProductView/ProductView.module.scss
+++ b/src/components/_common/_content/_product/ProductView/ProductView.module.scss
@@ -20,6 +20,9 @@
         }
 
         .right {
+            display: flex;
+            flex-direction: column;
+            gap: var(--offset-medium);
             width: 50%;
         }
     }
