add some components to productView, add hooks for works with Cart and Wishlist

--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -9,7 +9,7 @@
     --text-color-second: #666;
     --text-color-error: #f88;
     --text-color-success: #8f8;
-    --text-color-link: #88f;
+    --text-color-link: #008cff;
     --text-color-invert: #fff;
 
     --button-primary-background: #42a1e5;
