--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -1,4 +1,5 @@
 :root body.medium {
+    --offset-extra-small: 2px;
     --offset-small: 5px;
     --offset-medium: 10px;
     --offset-large: 20px;
