--- a/src/components/_common/_header/HeaderBanner/HeaderBanner.module.scss
+++ b/src/components/_common/_header/HeaderBanner/HeaderBanner.module.scss
@@ -6,6 +6,7 @@
     height: 300px;
     display: flex;
     align-items: end;
+    transition: var(--transition-medium);
 
     &.small {
         height: 100px;
