--- a/src/components/_ui/_button/Button/Button.module.scss
+++ b/src/components/_ui/_button/Button/Button.module.scss
@@ -60,6 +60,11 @@ $padding: var(--offset-medium);
         max-width: 40px;
     }
 
+    &.block {
+        display: flex;
+        width: 100%;
+    }
+
     &.skeleton {
         border: 1px solid var(--gradient);
         background: var(--gradient);
