--- a/src/components/_common/PageContent/PageContent.module.scss
+++ b/src/components/_common/PageContent/PageContent.module.scss
@@ -2,6 +2,7 @@ $padding: var(--offset-medium);
 
 .container {
     max-width: 1280px;
+    min-width: 320px;
     min-height: 100vh;
     margin: auto;
     padding: $padding;
