--- a/src/components/_product/ProductView/ProductView.module.scss
+++ b/src/components/_product/ProductView/ProductView.module.scss
@@ -3,12 +3,26 @@
     display: flex;
     flex-direction: column;
     gap: var(--offset-medium);
-    min-width: 1100px;
 
     .top {
         display: flex;
         justify-content: space-between;
         gap: var(--offset-medium);
+
+        @media screen and (max-width: 980px) {
+            flex-direction: column;
+            justify-content: start;
+
+            .left {
+                display: flex;
+                justify-content: center;
+            }
+
+            .left,
+            .right {
+                width: 100% !important;
+            }
+        }
 
         .left {
             width: 50%;
@@ -24,6 +38,15 @@
             gap: var(--offset-medium);
             width: 50%;
             align-items: flex-start;
+
+            @media screen and (max-width: 1200px) {
+                flex-direction: column;
+
+                .product,
+                .purchase {
+                    width: 100% !important;
+                }
+            }
 
             .product {
                 display: flex;
