--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -7,6 +7,7 @@
     --background-item: #f3f3f3;
     --text-color-main: #111;
     --text-color-second: #666;
+    --text-color-invisible: #ccc;
     --text-color-error: #f88;
     --text-color-success: #8f8;
     --text-color-link: #008cff;
