добавил старый компонент из другого проекта. карусель для карточек

--- a/src/components/_ui/_button/Button/Button.module.scss
+++ b/src/components/_ui/_button/Button/Button.module.scss
@@ -71,6 +71,7 @@ $padding: var(--offset-medium);
         animation: var(--gradient-animation);
         background-size: var(--gradient-size);
         color: transparent;
+        user-select: none;
 
         &:hover {
             color: transparent;
