fix background animation

--- a/src/components/_ui/_container/Skeleton/Image/SkeletonImage.module.scss
+++ b/src/components/_ui/_container/Skeleton/Image/SkeletonImage.module.scss
@@ -2,7 +2,7 @@
     color: transparent !important;
     user-select: none !important;
     border-radius: var(--offset-medium) !important;
-    background: var(--gradient) !important;
+    background: var(--gradient);
     background-size: var(--gradient-size) !important;
     animation: var(--gradient-animation) !important;
 
