--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -5,11 +5,14 @@
     --background-main: #f4f4fd;
     --background-second: #fff;
     --background-item: #f3f3f3;
+    --background-green: #3cc73c;
+    --background-red: #ff6060;
+
     --text-color-main: #111;
     --text-color-second: #666;
     --text-color-invisible: #ccc;
     --text-color-error: #f88;
-    --text-color-success: #8f8;
+    --text-color-success: #76ff76;
     --text-color-link: #008cff;
     --text-color-invert: #fff;
 
