--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -26,6 +26,7 @@
 
     --border-gray: #cbcbcb;
 
+    --box-shadow-modal: 0 2px 10px 0 rgba(0, 0, 0, .15);
     --box-shadow: 0 4px 0 -2px rgba(0, 0, 0, .15);
     --box-shadow-small: 0 2px 0 -1px rgba(0, 0, 0, .1);
     --box-shadow-none: 0 4px 0 -4px rgba(0, 0, 0, .15);
