--- a/src/containers/_header/HeaderSearchContainer/HeaderSearchContainer.module.scss
+++ b/src/containers/_header/HeaderSearchContainer/HeaderSearchContainer.module.scss
@@ -1,4 +1,6 @@
 .container {
+    display: flex;
     background: var(--background-second);
     padding: var(--offset-medium);
+    gap: var(--offset-medium);
 }
