--- a/src/components/_common/_header/HeaderCategoriesSelector/HeaderCategoriesSelector.module.scss
+++ b/src/components/_common/_header/HeaderCategoriesSelector/HeaderCategoriesSelector.module.scss
@@ -9,6 +9,7 @@
 
     .dropdown {
         position: absolute;
+        z-index: 100;
         background: var(--background-second);
         top: calc(100% + var(--offset-small));
         left: 0;
