--- a/src/components/_product/ProductCard/ProductCardHeader/ProductCardHeader.module.scss
+++ b/src/components/_product/ProductCard/ProductCardHeader/ProductCardHeader.module.scss
@@ -6,4 +6,10 @@
     display: flex;
     align-items: start;
     justify-content: space-between;
+
+    .side {
+        display: flex;
+        flex-direction: column;
+        gap: var(--offset-small);
+    }
 }
