--- a/src/components/_product/ProductCard/ProductCardHeader/ProductCardHeader.module.scss
+++ b/src/components/_product/ProductCard/ProductCardHeader/ProductCardHeader.module.scss
@@ -11,5 +11,13 @@
         display: flex;
         flex-direction: column;
         gap: var(--offset-small);
+
+        &.left {
+            align-items: start;
+        }
+
+        &.right {
+            align-items: end;
+        }
     }
 }
