--- a/src/components/_product/ProductView/ProductPrice/ProductPrice.module.scss
+++ b/src/components/_product/ProductView/ProductPrice/ProductPrice.module.scss
@@ -17,7 +17,7 @@
                 color: var(--text-color-main);
             }
 
-            &:after {
+            .amount {
                 font-size: 12px;
             }
         }
@@ -48,8 +48,7 @@
         color: var(--text-color-main);
         position: relative;
 
-        &:after {
-            content: 'за 1 шт.';
+        .amount {
             white-space: nowrap;
             font-size: 16px;
             font-weight: normal;
