--- a/src/components/_ui/_input/Input/Input.module.scss
+++ b/src/components/_ui/_input/Input/Input.module.scss
@@ -18,4 +18,9 @@
         display: flex;
         width: 100%;
     }
+
+    &.loading {
+        animation: var(--loading-animtion);
+        pointer-events: none;
+    }
 }
