--- a/src/components/_cart/CartItems/CartItems.module.scss
+++ b/src/components/_cart/CartItems/CartItems.module.scss
@@ -15,6 +15,9 @@
             display: flex;
             flex-direction: column;
             gap: var(--offset-medium);
+            width: 100%;
+            max-width: calc(100% - 400px);
+            min-width: 400px;
         }
 
         .info {
@@ -30,9 +33,19 @@
             }
 
             .box {
+                display: flex;
+                flex-direction: column;
                 background: var(--background-second);
+                gap: var(--offset-large);
             }
         }
     }
 
+    &.loading {
+        .list,
+        .box {
+            animation: var(--loading-animtion);
+            pointer-events: none;
+        }
+    }
 }
