fix input, add debounce to CartItem Input, add animation

--- a/src/components/_cart/CartItems/CartItems.module.scss
+++ b/src/components/_cart/CartItems/CartItems.module.scss
@@ -44,7 +44,7 @@
     &.loading {
         .list,
         .box {
-            animation: var(--loading-animtion);
+            animation: var(--loading-animation-simple);
             pointer-events: none;
         }
     }
