--- a/src/components/_common/_header/HeaderLogo/HeaderLogo.module.scss
+++ b/src/components/_common/_header/HeaderLogo/HeaderLogo.module.scss
@@ -2,6 +2,7 @@
     font-size: 30px;
     font-family: Agbalumo, 'serif';
     color: var(--text-color-main);
+    text-decoration: none;
 
     span {
         font-size: 12px;
