add reviews components, add reviews hooks

--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -4,7 +4,7 @@
 
     --background-main: #f4f4fd;
     --background-second: #fff;
-    --background-item: #f3f3f3;
+    --background-item: #F1F1F3;
     --background-green: #3cc73c;
     --background-red: #ff6060;
 
