--- a/src/components/_review/Reviews/Reviews.module.scss
+++ b/src/components/_review/Reviews/Reviews.module.scss
@@ -4,9 +4,10 @@
     box-shadow : var(--box-shadow-none);
 
     .left {
+        width          : 100%;
         display        : flex;
         flex-direction : column;
-        gap            : var(--offset-medium);
+        gap            : var(--offset-extra-large);
     }
 
     .right {
