--- a/src/components/_review/Reviews/ReviewForm/ReviewForm.module.scss
+++ b/src/components/_review/Reviews/ReviewForm/ReviewForm.module.scss
@@ -1,5 +1,6 @@
 .container {
+    max-width      : 400px;
     display        : flex;
     flex-direction : column;
-    gap            : var(--offset-extra-large);
+    gap            : var(--offset-small);
 }
