--- a/src/components/_review/Reviews/ReviewItem/ReviewItem.module.scss
+++ b/src/components/_review/Reviews/ReviewItem/ReviewItem.module.scss
@@ -1,7 +1,7 @@
 .container {
     display        : flex;
     flex-direction : column;
-    gap            : var(--offset-large);
+    gap            : var(--offset-medium);
 
     .top {
         display         : flex;
@@ -46,6 +46,17 @@
     }
 
     .review {
-        font-size : 14px;
+        display        : flex;
+        flex-direction : column;
+        gap            : var(--offset-small);
+
+        .title {
+            font-weight : bold;
+            font-size   : 16px;
+        }
+
+        .body {
+            font-size : 14px;
+        }
     }
 }
