--- a/src/components/_review/Reviews/ReviewItem/ReviewItem.module.scss
+++ b/src/components/_review/Reviews/ReviewItem/ReviewItem.module.scss
@@ -2,12 +2,13 @@
     display        : flex;
     flex-direction : column;
     gap            : var(--offset-medium);
+    background     : var(--background-second);
 
     .top {
         display         : flex;
         justify-content : space-between;
         gap             : var(--offset-medium);
-        align-items     : end;
+        align-items     : start;
 
         .user {
             display     : flex;
