--- a/src/components/_review/Reviews/ReviewsList/ReviewsList.module.scss
+++ b/src/components/_review/Reviews/ReviewsList/ReviewsList.module.scss
@@ -1,5 +1,5 @@
 .container {
     display        : flex;
     flex-direction : column;
-    gap            : var(--offset-extra-large);
+    gap            : var(--offset-medium);
 }
